@@ -139,4 +139,5 @@ v 1.9:
 	- Fix world mirroring so it correctly creates data files and data sources for partially mirrored worlds.
 	- Fixed world mirroring so it returns the correct data for the requested world.
 	- Change Service registration to register WorldsHolder instead of AnjoPermissionsHandler. This is the correct entry point for all data.
-	- Depreciate PlayerTeleportEvent as it's all handled in PlayerChangedWorldEvent.
+	- Depreciate PlayerTeleportEvent, PlayerRespawnEvent and PlayerPortalEvent as it's all handled in PlayerChangedWorldEvent.
+	  This also means we no longer update permissions before we change worlds.
